Fixed issue where the main content of the admin updates page would not align flush with the second top navbar.

--- a/src/main/webapp/css/main-content-updates.css
+++ b/src/main/webapp/css/main-content-updates.css
@@ -14,16 +14,15 @@ html, body {
 	overflow-x: hidden;
 	background-color: var(--off-white);
 	font-size: 12px;
-	padding: 7% 10px;
 	height: 100%;
+	display: block;
 }
 
 .main-grid {
 	display: grid;
 	grid-template-columns: auto auto auto auto auto auto;
 	grid-template-rows: auto auto auto auto;
-	height: 77%;
-	margin: 1%;
+	height: 80%;
 }
 
 .content-container {
