--- a/src/main/webapp/css/secondtopnav.css
+++ b/src/main/webapp/css/secondtopnav.css
@@ -11,11 +11,9 @@ html, body {
 
 .sectopnav {
 	
-	z-index: 1;
 	top: 6%;
 	height: 7%;
 	width: 100%;
-	position: fixed;
 	background-color: var(--darker-blue);
 	border-style: solid;
 	border-width: 2px;
