--- a/src/main/webapp/css/topnav.css
+++ b/src/main/webapp/css/topnav.css
@@ -15,7 +15,6 @@ html, body {
 	top: 0;
 	height: 6%;
 	width: 100%;
-	position: fixed;
 	background-color: #334257;
 }
 
